# waifu-roller

./: .gitignore  LICENSE  README.md  build.ps1  requirements.txt  run.ps1  setup.cfg  setup.py  sync_version.py  update.py
.github/workflows/: main.yml
docs/: CHANGELOG.md  DEVELOPMENT.md  REFERENCE.md  TODO.md
scripts/: build.ps1  install.py  mudae.ahk  sync_version.py
src/: abort.py  config.yaml  core.py  driver.py  exceptions.py  keystrokes.py  main.py  open.py  parser.py  setup.cfg  setup.py
src/waifu/: __init__.py  abort.py  config.py  config_template.py  config_template.yaml  core.py  exceptions.py  main.py  parser.py
src/waifu_roller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: config.yaml  original.py  test.py
waifu/: exceptions.py  parser.py
waifu_roller.egg-info/: PKG-INFO  SOURCES.txt
