[metadata]
name = waifu-roller
version = 0.1.0
author = Vincent Lin
author_email = vinlin24@outlook.com
license = MIT
license_file = LICENSE
description = Command line tool for rolling Mudae waifus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinlin24/waifu-roller
project_urls =
    Bug Tracker = https://github.com/vinlin24/waifu-roller/issues
classifiers =
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages =
    waifu
python_requires = >=3.10
install_requires =
    keyboard >= 0.13.5
    PyAutoGUI >= 0.9.53
    PyYAML >= 6.0
    rich >= 12.5.1

[options.entry_points]
console_scripts = 
	waifu = waifu.main:main
