[metadata]
name = waifu-roller
version = 0.0.1
description = Command line tool for rolling Mudae characters
classifiers = 
	Programming Language :: Python :: 3
author = Vincent Lin
author_email = soulace2425@outlook.com

[options]
packages = waifu
install_requires = 
	commonmark==0.9.1
	keyboard==0.13.5
	MouseInfo==0.1.3
	PyAutoGUI==0.9.53
	PyGetWindow==0.0.9
	Pygments==2.13.0
	PyMsgBox==1.0.9
	pyperclip==1.8.2
	PyRect==0.2.0
	PyScreeze==0.1.28
	pytweening==1.0.4
	PyYAML==6.0
	rich==12.5.1

[options.entry_points]
console_scripts = 
	waifu = waifu.main:main

